✅ Исправлена загрузка переводов и добавлены ключи nav.posts во все языки

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,7 +2,9 @@
   "nav": {
     "home": "Главная",
     "about": "О нас",
-    "leads": "Заявки"
+    "leads": "Заявки",
+    "posts": "Посты"
+
   },
   "change_lang": "Сменить язык"
 }
