💬 Подготовка к i18n-refactor с master.json

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,10 +1,11 @@
 {
+  "aboutDescription": "More info will be here.",
+  "aboutTitle": "About Mitkadem",
+  "change_lang": "Change language",
   "nav": {
     "home": "Home",
-    "about": "About",
     "leads": "Leads",
     "posts": "Posts"
-
   },
-  "change_lang": "Change language"
+  "welcome": ""
 }
