--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -1,10 +1,11 @@
 {
+  "aboutDescription": "More info will be here.",
+  "aboutTitle": "About Mitkadem",
+  "change_lang": "Changer de langue",
   "nav": {
     "home": "Accueil",
-    "about": "À propos",
     "leads": "Demandes",
     "posts": "Articles"
-
   },
-  "change_lang": "Changer de langue"
+  "welcome": ""
 }
