--- a/public/locales/he/translation.json
+++ b/public/locales/he/translation.json
@@ -1,10 +1,11 @@
 {
+  "aboutDescription": "More info will be here.",
+  "aboutTitle": "About Mitkadem",
+  "change_lang": "שנה שפה",
   "nav": {
     "home": "ראשי",
-    "about": "עלינו",
     "leads": "פניות",
     "posts": "פוסטים"
-
   },
-  "change_lang": "שנה שפה"
+  "welcome": ""
 }
