--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,10 +1,11 @@
 {
+  "aboutDescription": "More info will be here.",
+  "aboutTitle": "About Mitkadem",
+  "change_lang": "Сменить язык",
   "nav": {
     "home": "Главная",
-    "about": "О нас",
     "leads": "Заявки",
     "posts": "Посты"
-
   },
-  "change_lang": "Сменить язык"
+  "welcome": ""
 }
